# c3-claude-bootstrap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TOOLING.md  install.sh  uninstall.sh
bootstrap/: CLAUDE.global.template.md  CLAUDE.project.template.md  README.md
commands/: catchup.md  commit.md  debug.md  document.md  first-boot.md  plan.md  review.md  spawn-agent.md
docs/: README.md  architecture.md  first-boot.md  memory.md  spawn-agent.md  upstream-contribution.md
examples/: CLAUDE.md.example
scripts/: spawn-agent.sh
tools/swat-memory/: README.md  pyproject.toml
tools/swat-memory/hooks/: com.c3.swat-memory.maintenance.plist  session_start.py  stop_summarize.py
tools/swat-memory/scripts/: install.sh  uninstall.sh
tools/swat-memory/src/swat_memory/: __init__.py  __main__.py  config.py  db.py  embeddings.py  episodes.py  facts.py  graph.py  maintenance.py  migrate_markdown.py  recall.py  schema.sql  server.py  stats.py
tools/swat-memory/tests/: conftest.py  test_decay.py  test_graph.py  test_migration.py  test_recall.py  test_schema.py  test_stop_summarize.py
